--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,13 @@
         <nav th:replace="fragments :: navigation"></nav>
 
     <!-- BODY CONTENT -->
-        
-        <!-- Title -->
-        <h1>Website Home Page</h1>
+
+        <div class="container">
+            
+            <!-- Title -->
+            <h1>Website Home Page</h1>
+
+        </div>
 
     </body>
 </html>
