--- a/src/main/resources/templates/events/form.html
+++ b/src/main/resources/templates/events/form.html
@@ -10,17 +10,21 @@
 
     <!-- BODY CONTENT -->
 
-        <!-- Title -->
-        <h1>Events Form Page</h1>
+        <div class="container">
+    
+            <!-- Title -->
+            <h1>Events Form Page</h1>
+    
+            <hr>
+    
+            <!-- Event Form -->
+            <form method="post" action="/events/form">
+                <label for="eventName">Enter an event name:</label>
+                <input type="text" id="eventName" name="name" placeholder="Event Name" />
+                <input type="submit" class="btn btn-primary" value="submit" />
+            </form>
 
-        <hr>
-
-        <!-- Event Form -->
-        <form method="post" action="/events/form">
-            <label for="eventName">Enter an event name:</label>
-            <input type="text" id="eventName" name="name" placeholder="Event Name" />
-            <input type="submit" class="btn btn-primary" value="submit" />
-        </form>
+        </div>
 
     </body>
 </html>
