--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -32,7 +32,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="/events">Events</a>
                         <a class="dropdown-item" href="/events/form">Event Form</a>
-                        <a class="dropdown-item" href="/events/remove">Remove Event</a>
+                        <a class="dropdown-item" href="/events/delete">Remove Event</a>
                     </div>
                 </li>
             </ul>
