--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -23,12 +23,16 @@
                     <tr>
                         <th>#</th>
                         <th>Events</th>
+                        <th>Description</th>
+                        <th>Contact Email</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr th:each="event : ${events}">
                         <td th:text="${event.id}">Event ID</td>
                         <td th:text="${event.name}">Event Name</td>
+                        <td th:text="${event.description}">Description</td>
+                        <td th:text="${event.contactEmail}">Contact Email</td>
                     </tr>
                 </tbody>
             </table>
