--- a/src/main/resources/templates/events/form.html
+++ b/src/main/resources/templates/events/form.html
@@ -19,8 +19,21 @@
     
             <!-- Event Form -->
             <form method="post" action="/events/form">
-                <label for="eventName">Enter an event name:</label>
-                <input type="text" id="eventName" name="name" placeholder="Event Name" />
+                <div class="form-group">
+                    <label for="eventName">Enter an event name:</label>
+                    <input class="form-control" type="text" id="eventName" name="name" placeholder="Event Name" />
+                </div>
+                
+                <div class="form-group">
+                    <label for="eventDescription">Enter a description:</label>
+                    <input class="form-control" type="text" id="eventDescription" name="description" placeholder="Description" />
+                </div>
+                
+                <div class="form-group">
+                    <label for="contactEmail">Contact Email:</label>
+                    <input class="form-control" type="text" id="contactEmail" name="contactEmail" placeholder="Contact Email" />
+                </div>
+                
                 <input type="submit" class="btn btn-primary" value="submit" />
             </form>
 
