added contact and validation

--- a/src/main/resources/templates/events/delete.html
+++ b/src/main/resources/templates/events/delete.html
@@ -24,6 +24,7 @@
                     <thead>
                         <tr>
                             <th>#</th>
+                            <th>ID</th>
                             <th>Events</th>
                             <th>Description</th>
                             <th>Contact Email</th>
@@ -32,6 +33,7 @@
                     <tbody>
                         <tr th:each="event : ${events}">
                             <td><input type="checkbox" name="eventIds" th:value="${event.id}" /></td>
+                            <td th:text="${event.id}">Event ID</td>
                             <td th:text="${event.name}">Event Name</td>
                             <td th:text="${event.description}">Description</td>
                             <td th:text="${event.contactEmail}">Contact Email</td>
