--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,7 +24,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">Home</a>
                 </li>
-                <!-- Recipe Contents -->
+                <!-- Events Contents -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Events
@@ -33,6 +33,17 @@
                         <a class="dropdown-item" href="/events">Events</a>
                         <a class="dropdown-item" href="/events/form">Event Form</a>
                         <a class="dropdown-item" href="/events/delete">Delete Event</a>
+                    </div>
+                </li>
+                <!-- Contacts Contents -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Contacts
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="/contacts">Contacts</a>
+                        <a class="dropdown-item" href="/contacts/form">Contact Form</a>
+                        <a class="dropdown-item" href="/contacts/remove">Remove Contact</a>
                     </div>
                 </li>
             </ul>
