--- a/src/main/resources/templates/events/form.html
+++ b/src/main/resources/templates/events/form.html
@@ -13,7 +13,7 @@
         <div class="container">
     
             <!-- Title -->
-            <h1>Events Form Page</h1>
+            <h1 th:text="${title}">title</h1>
     
             <hr>
     
@@ -22,16 +22,19 @@
                 <div class="form-group">
                     <label for="eventName">Enter an event name:</label>
                     <input class="form-control" type="text" id="eventName" name="name" placeholder="Event Name" />
+                    <p th:text="${errorMsgName}" style="color: red"></p>
                 </div>
                 
                 <div class="form-group">
                     <label for="eventDescription">Enter a description:</label>
                     <input class="form-control" type="text" id="eventDescription" name="description" placeholder="Description" />
+                    <p th:text="${errorMsgDescription}" style="color: red"></p>
                 </div>
                 
                 <div class="form-group">
                     <label for="contactEmail">Contact Email:</label>
                     <input class="form-control" type="text" id="contactEmail" name="contactEmail" placeholder="Contact Email" />
+                    <p th:text="${errorMsgContactEmail}" style="color: red"></p>
                 </div>
                 
                 <input type="submit" class="btn btn-primary" value="submit" />
